--- a/www/views/profile-notifications.hbs
+++ b/www/views/profile-notifications.hbs
@@ -1,23 +1,6 @@
 
-	<div id="profileTabs" class="container clearfix">
+	<div class="tab_profile notifications_center">
+		
+		<p class="empty">Por el momento, no hay ajustes de notificaciones que mostrar.</p>
 
-		<div class="content profile">
-			
-			<div class="tabs_quiniela clearfix">
-				<ul>
-					<li><a class="hook" data-resource="profile-methods" href="profile.html?method=methods">Tarjetas</a></li>
-					<li><a class="hook" data-resource="profile-documents" href="profile.html?method=documents">Documentos</a></li>
-					<li><a class="hook" data-resource="profile-withraw" href="profile.html?method=withraw">Retirar fondos</a></li>
-					<li><a class="hook" data-resource="profile-history" href="profile.html?method=history">Historial</a></li>
-					<li class="selected"><a>Notificaciones</a></li>
-				</ul>
-			</div>
-			<div class="tab_profile notifications_center">
-				<p class="empty">Por el momento, no hay ajustes de notificaciones que mostrar.</p>
-				{{!-- <a class="green_button">Guardar</a> --}}
-			</div>
-			
-		</div><!-- content -->
-
-	</div><!-- container -->
-	
+	</div><!-- notifications_center -->
