--- a/www/views/profile-documents.hbs
+++ b/www/views/profile-documents.hbs
@@ -1,43 +1,23 @@
 
-	<div id="profileTabs" class="container clearfix">
-
-		<div class="content profile">
-			
-			<div class="tabs_quiniela clearfix">
-				<ul>
-					<li><a class="hook" data-resource="profile-methods" href="profile.html">Tarjetas</a></li>
-					<li class="selected"><a>Documentos</a></li>
-					<li><a class="hook" data-resource="profile-withraw" href="profile.html?method=withraw">Retirar fondos</a></li>
-					<li><a class="hook" data-resource="profile-history" href="profile.html?method=history">Historial</a></li>
-					<li><a class="hook" data-resource="profile-notifications" href="profile.html?method=notifications">Notificaciones</a></li>
-				</ul>
-			</div>
-			<div class="tab_profile documents list">
-				<ul>
-					<li class="clearfix">
-						<span style=" font-weight: 700; width: 20%; text-align: left; display: inline-block;">Documento</span> 
-						<span class="highlight" style=" font-weight: 700; width: 50%; text-align: left; display: inline-block;">Identificación</span> 
-						<span style=" font-weight: 700; width: 28%; text-align: left; display: inline-block;">Estado</span>					
-					</li>
-					{{# data.documents}}
-						<li class="clearfix">
-							<span style="width: 20%; text-align: left; display: inline-block;">{{type}}</span> 
-							<span class="highlight" style="width: 50%; text-align: left; display: inline-block;">#####{{ lastFour number }}</span> 
-							<span style="width: 28%; text-align: left; display: inline-block;">{{# valid}}Aprobado{{/ valid}}{{^ valid}}Sin aprobar{{/ valid}}</span>					
-						</li>
-					{{/ data.documents}}
-					{{^ data.documents}}
-						<li class="clearfix">
-							<p class="empty">No tienes documentos guardados.</p>				
-						</li>
-					{{/ data.documents}}
-				</ul>
-			</div>
-			
-			<div class="legales clearfix">
-				<a class="link_legal" onclick="window.open('https://www.pickwin.net/terminos-y-condiciones', '_blank', 'location=yes')" >Términos y condiciones | </a>
-				<a class="link_legal" onclick="window.open('https://www.pickwin.net/aviso-de-privacidad', '_blank', 'location=yes')" >Política de privacidad</a>
-			</div>
-		</div><!-- content -->
-
-	</div><!-- container -->
+	<div class="tab_profile documents list">
+		<ul class="tablelike">
+			<li class="clearfix head">
+				<span style=" font-weight: 500; width: 20%; display: inline-block;">Tipo</span> 
+				<span style=" font-weight: 500; width: 50%; display: inline-block;">Identificación</span> 
+				<span style=" font-weight: 500; width: 28%; display: inline-block;">Estado</span>					
+			</li>
+			{{# data.documents}}
+				<li class="clearfix">
+					<span style="width: 20%; display: inline-block;">{{type}}</span> 
+					<span class="highlight" style="width: 50%; display: inline-block;">##### {{ lastFour number }}</span> 
+					<span style="width: 28%; display: inline-block;">{{# valid}}Aprobado{{/ valid}}{{^ valid}}Sin aprobar{{/ valid}}</span>					
+				</li>
+			{{/ data.documents}}
+			{{^ data.documents}}
+				<li class="clearfix">
+					<p class="empty">No tienes documentos guardados.</p>				
+				</li>
+			{{/ data.documents}}
+		</ul>
+	</div>
+	
