--- a/www/views/profile-withraw.hbs
+++ b/www/views/profile-withraw.hbs
@@ -1,34 +1,14 @@
+
+	<div class="tab_profile profile withraw">
+
+		<p>Hola Pickwinero, para poder retirar fondos por favor danos la siguiente información.</p>
+
+		<p>Te recordamos que para poder retirar tus fondos tendrás que haber jugado al menos el 100% de lo que hayas depositado la última vez. Y los retiros sólo podrán hacerce cada 48 hrs.</p>
+
+		<p>Después de solicitar tu retiro, el equipo de Pickwin analizará tu petición y te informarán por correo electrónico el resultado de tu petición.</p>
+
+		<p>El monto mínimo para retirar saldo es de <strong>$100.00 MXN</strong></p>
+		<p>Tu balance <strong>${{ formatCurrency me.balanceReal}} MXN</strong></p>
+
+	</div><!-- tab_profile -->
 	
-	<div id="profileTabs" class="container clearfix">
-		
-		<div class="content profile">
-			
-			<div class="tabs_quiniela clearfix">
-				<ul>
-					<li><a class="hook" data-resource="profile-methods" href="profile.html">Tarjetas</a></li>
-					<li><a class="hook" data-resource="profile-documents" href="profile.html?method=documents">Documentos</a></li>
-					<li class="selected"><a>Retirar fondos</a></li>
-					<li><a class="hook" data-resource="profile-history" href="profile.html?method=history">Historial</a></li>
-					<li><a class="hook" data-resource="profile-notifications" href="profile.html?method=notifications">Notificaciones</a></li>
-				</ul>
-			</div>
-			<div class="tab_profile profile withraw">
-
-				<p>Hola Pickwinero, para poder retirar fondos por favor danos la siguiente información.</p>
-
-				<p>Te recordamos que para poder retirar tus fondos tendrás que haber jugado al menos el 100% de lo que hayas depositado la última vez. Y los retiros sólo podrán hacerce cada 48 hrs.</p>
-
-				<p>Después de solicitar tu retiro, el equipo de Pickwin analizará tu petición y te informarán por correo electrónico el resultado de tu petición.</p>
-
-				<p>El monto mínimo para retirar saldo es de <strong>$100.00 MXN</strong></p>
-				<p>Tu balance <strong>${{ formatCurrency me.balanceReal}} MXN</strong></p>
-
-			</div>
-			
-			<div class="legales clearfix">
-				<a class="link_legal" onclick="window.open('https://www.pickwin.net/terminos-y-condiciones', '_blank', 'location=yes')" >Términos y condiciones | </a>
-				<a class="link_legal" onclick="window.open('https://www.pickwin.net/aviso-de-privacidad', '_blank', 'location=yes')" >Política de privacidad</a>
-			</div>
-
-		</div><!-- content -->
-	</div><!-- container -->
