--- a/www/views/profile.hbs
+++ b/www/views/profile.hbs
@@ -3,9 +3,9 @@
 	
 		<div class="content profile">
 			
-			<div class="tabs_quiniela clearfix">
+			<div class="tabs_profile clearfix">
 				<ul>
-					<li class="selected"><a>Tarjetas</a></li>
+					<li class="selected"><a class="hook" data-resource="profile-methods" href="profile.html?method=methods">Tarjetas</a></li>
 					<li><a class="hook" data-resource="profile-documents" href="profile.html?method=documents">Documentos</a></li>
 					<li><a class="hook" data-resource="profile-withraw" href="profile.html?method=withraw">Retirar fondos</a></li>
 					<li><a class="hook" data-resource="profile-history" href="profile.html?method=history">Historial</a></li>
@@ -38,7 +38,7 @@
 					</ul>
 					<a onclick="$('#addNewCard').velocity('fadeIn');" id="promptAddCard" class="green_button">Agregar tarjeta</a>
 				</div><!-- tab_profile -->
-				
+
 			</div><!-- tabContainer -->
 
 			<div id="addNewCard" class="agregartarjeta clearfix backed_modal" style="display: none;">
