--- a/www/css/style.css
+++ b/www/css/style.css
@@ -202,7 +202,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 .quiniela.quiniela_open .quiniela_content .quiniela_info {width: 30%; float: left;}
 .quiniela.quiniela_open .quiniela_content .quiniela_entrada {width: 25%; float: right; font-size: 0.75rem; font-weight: 500; text-align: center;}
-.quiniela.quiniela_open .quiniela_content .quiniela_picks_ok {width: 12%; float: left;}
+.quiniela.quiniela_open .quiniela_content .quiniela_picks_ok {width: 12%; float: right;}
 .quiniela .quiniela_content .quiniela_picks_ok>img { display: block; margin: auto; float: none;}
 .quiniela .quiniela_content .quiniela_picks_ok .titulo {text-align: center;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa {width: 25%; float: right; font-size: 0.75rem; font-weight: 500; text-align: center;}
