General design rundown, registry flow check, deposit response handling

--- a/www/views/deposit-stores.hbs
+++ b/www/views/deposit-stores.hbs
@@ -25,7 +25,7 @@
 				NOTA: Las tiendas cobran una comisión de $8.00 al cliente que acude a pagar.
 			</p>
 			{{!-- <input type="text" placeholder="Número de celular a 10 dígitos"> --}}
-			<div class="submit_holder">
+			<div class="botones submit_holder">
 				<input type="submit" id="purchaseStore" class="green_button" value="Ver código">
 			</div>
 		</form>
