--- a/www/views/deposit.hbs
+++ b/www/views/deposit.hbs
@@ -1,6 +1,6 @@
 
 	<div id="depositCard" class="content abonar">
-		<h3>FORMA DE PAGO</h3>
+		<h3>ELIGE FORMA DE PAGO</h3>
 		<div class="botones deposit clearfix">
 			<a class="selected hook" data-resource="deposit" href="deposit.html">Tarjeta de crédito</a>
 			<a class="hook" data-resource="deposit-stores" href="deposit-stores.html">Tienda de conveniencia</a>
@@ -46,7 +46,7 @@
 									{{/ data.cards}}
 								</ul>
 							</div>
-							<div class="submit_holder">
+							<div class="botones submit_holder">
 								<input type="submit" id="addFunds" class="green_button" value="Abonar">
 							</div>
 					</div>
