--- a/www/views/partials/quiniela-games.hbs
+++ b/www/views/partials/quiniela-games.hbs
@@ -1,4 +1,4 @@
-	<p class="instructions">Completa tus picks y guarda tu selección.</p>
+	<p style="display: none;" class="instructions">Completa tus picks y guarda tu selección.</p>
 	<h3>PARTIDOS</h3>
 	<div class="opciones_partido clearfix">
 		<span>LOCAL</span> <span>{{# if data.sport_allow_ties}}EMP{{/ if}}{{# data.fixtures.0.advantage}}LÍNEA{{/ data.fixtures.0.advantage}}</span> <span>VISITANTE</span>
