--- a/www/views/detail-quiniela-live.hbs
+++ b/www/views/detail-quiniela-live.hbs
@@ -54,17 +54,10 @@
 						<span class="number">${{ formatCurrency data.pool.entry_fee}}</span>
 					</div>
 				</div><!-- quiniela_content -->
+				<a style="display: none;" data-extra="" id="reg_outta_game" class="red_button mini missing_info"></a>
 			</div><!-- quiniela -->
 		</a><!-- link_wrapper -->
-
-		<div id="lesDrops" class="quinielas_dropdowns live clearfix">
-
-		</div> <!-- dropdowns -->
 		
-		<div class="registro_quiniela clearfix">
-			<a style="display: none;" id="reg_outta_game" data-extra="" class="red_button missing_info">Cancelar registro</a>
-		</div><!-- opciones registro -->
-
 		<div class="tabs_quiniela clearfix">
 			<ul>
 				<li class="selected"><a class="hook missing_info" data-object="{{data.pool.id}}" data-extra="" data-resource="detail-live" href="detail.html?registered=true&tab=postures&id={{data.pool.id}}&entry=">Picks</a></li>
@@ -75,6 +68,9 @@
 				<li><a class="hook missing_info" data-object="{{data.pool.id}}" data-extra="" data-resource="detail-scores" href="detail.html?registered=true&tab=scores">Marcadores</a></li>
 			</ul>
 		</div>
+		
+		<div id="lesDrops" class="quinielas_dropdowns live clearfix">
+		</div> <!-- lesDrops -->
 
 		<div id="tabContainer" class="tabs">
 			<div id="insertPartidos" class="partidos clearfix radio_group">
