--- a/www/css/style.css
+++ b/www/css/style.css
@@ -201,8 +201,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 /*quiniela open*/
 
 .quiniela.quiniela_open .quiniela_content .quiniela_info {width: 30%; float: left;}
-.quiniela.quiniela_open .quiniela_content .quiniela_entrada {width: 25%; float: right; font-size: 0.75rem; font-weight: 500; text-align: center;}
-.quiniela.quiniela_open .quiniela_content .quiniela_picks_ok {width: 12%; float: right;}
+.quiniela .quiniela_content .quiniela_entrada {width: 25%; float: right; font-size: 0.75rem; font-weight: 500; text-align: center;}
+.quiniela.quiniela_open .quiniela_content .quiniela_picks_ok {width: 12%; float: left;}
 .quiniela .quiniela_content .quiniela_picks_ok>img { display: block; margin: auto; float: none;}
 .quiniela .quiniela_content .quiniela_picks_ok .titulo {text-align: center;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa {width: 25%; float: right; font-size: 0.75rem; font-weight: 500; text-align: center;}
@@ -212,8 +212,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 .quiniela.quiniela_live .quiniela_content .quiniela_info {width: 30%; float: left;}
 .quiniela.quiniela_live .quiniela_content .quiniela_picks_ok {width: 12%; float: left;}
-.quiniela.quiniela_live .quiniela_content .quiniela_aganar {width: 25%; float: left;}
-.quiniela.quiniela_live .quiniela_content .quiniela_entrada {width: 20%; float: left;}
+.quiniela .quiniela_content .quiniela_aganar {width: 25%; float: left;}
+.quiniela .quiniela_content .quiniela_entrada { width: 20%; float: right; text-align: center;}
 .quiniela.quiniela_live .quiniela_content .quiniela_bolsa {width: 28%; float: left;}
 .quiniela.quiniela_live .quiniela_content .quiniela_bolsa span.number {float: left; margin-left: 5px; color: #77BC1F;}
 .quiniela.quiniela_live .quiniela_content .quiniela_bolsa img {margin-top: -2px;}
@@ -617,7 +617,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#777777', end
 .radio_group ul li input[type=radio]:checked ~ .check::before{ background: #5ba433;}
 .radio_group ul li label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 1.35em; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
 
-.radio_group.tarjetas {max-width: 290px; margin: auto;}
+.radio_group.tarjetas:not(.tab_profile) {max-width: 290px; margin: auto;}
 .radio_group.tarjetas ul li label{line-height: 1rem;}
 .radio_group.tarjetas ul li label *{display: inline-block; vertical-align: middle; line-height: 2rem;}
 
@@ -736,7 +736,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#777777', end
 	.login .form p {font-size: 14px; color: #d8d8d8; margin-bottom: 1.5rem;}
 	.menu>ul>li>a{ display: block; width: 100%; height: 100%;}
 	.quiniela .quiniela_entrada{margin-right: 0.75rem;}
-	.quiniela .quiniela_aganar{margin-right: 0.75rem;}
+	.quiniela .quiniela_aganar{margin-right: 0.75rem; float: right!important; text-align: center;}
+	.quiniela .quiniela_aganar .number{ color: #8c9d3b; font-size: 0.9rem; }
+	.quiniela .quiniela_entrada .number{ font-size: 0.9rem; }
 	.quiniela .quiniela_info{margin-right: 0.75rem; width: 43%;}
 	.featured .quiniela_header h2{color: #FF8D00;}
 	.timer_active{color: #d93146; letter-spacing: 1.5px;}
