--- a/www/views/partials/each-my-quiniela.hbs
+++ b/www/views/partials/each-my-quiniela.hbs
@@ -3,6 +3,7 @@
 		{{sport.name}} {{point_format}} garantizado clearfix">
 			<div class="quiniela_header clearfix">
 					<div class="quiniela_iconos clearfix">
+						<img src="{{cordova_full_path}}images/{{# sport.icon}}{{.}}{{/ sport.icon}}{{# sport_icon_class}}{{.}}{{/ sport_icon_class}}.png">
 						{{^ if_eq private 0 }}
 							<img src="{{cordova_full_path}}images/private-icon.png">
 						{{/ if_eq }}
@@ -14,20 +15,22 @@
 								<img src="{{cordova_full_path}}images/natural.png">
 							{{/ if_eq }}
 						{{/ if_eq }}
-						<img src="{{cordova_full_path}}images/{{# sport.icon}}{{.}}{{/ sport.icon}}{{# sport_icon_class}}{{.}}{{/ sport_icon_class}}.png">
+						{{# if guaranteed_prize}}
+							<img src="{{cordova_full_path}}images/garantizado.png">
+						{{/ if }}
 					</div><!-- iconos -->
 					<h2>{{name_replaced}}</h2>
 				</div><!-- quiniela_header -->
 				<div class="quiniela_content clearfix">
 					<div class="quiniela_info clearfix">
-						<span class="registros">REGISTROS: {{entry_count}}</span>
-						<span {{# if_less time_left 86400}}data-countdown="{{deadline}}"{{/ if_less }} class="cierre">CIERRE: {{^ if_less time_left 86400}}{{unixTime deadline}}{{/ if_less }}</span>
 						{{# if_less time_left 1}}
 							<span class="limite">FINALIZÓ</span>
 						{{/ if_less }}
 						{{# if_eq status "live"}}
-							<span class="live">JUGANDO</span>
+							<span class="live">EN CURSO</span>
 						{{/ if_eq}}
+						<span class="registros">REGISTROS: {{entry_count}}</span>
+						<span {{# if_less time_left 86400}}data-countdown="{{deadline}}"{{/ if_less }} class="cierre">CIERRE: {{^ if_less time_left 86400}}{{unixTime deadline}}{{/ if_less }}</span>
 						{{!-- <span class="aciertos">ACIERTOS: 3/15</span> --}}
 					</div><!-- quiniela_info -->
 					{{^ if_eq entry_count 0 }}
@@ -48,12 +51,7 @@
 					</div>
 					<div class="quiniela_aganar clearfix">
 						<span class="titulo">BOLSA</span>
-						{{# if guaranteed_prize}}
-							<img src="{{cordova_full_path}}images/garantizado.png">
-						{{/ if }}
-						{{^ if guaranteed_prize}}
-							<img src="{{cordova_full_path}}images/billete.png">
-						{{/ if }}
+						<img src="{{cordova_full_path}}images/billete.png">
 						<span class="number">${{ formatCurrency available}}</span>
 					</div>
 				</div><!-- quiniela_content -->
