--- a/www/views/partials/similar-picks.hbs
+++ b/www/views/partials/similar-picks.hbs
@@ -1,7 +1,7 @@
 
 {{# if data.similar_entries}}
 	<form id="pickActionsForm" action="" method="POST">
-		<select id="select_copy_picks" class="unique" name="select_copy_picks">
+		<select id="select_copy_picks" class="unique" name="select_copy_picks styled-select gray">
 			<option value="">Copiar picks</option>
 			{{# each data.similar_entries}}
 				<option value="{{id}}">{{pool.name_replaced}}{{# number}}<sup>({{.}})</sup>{{/ number}}</option>
