--- a/www/views/partials/each-quiniela.hbs
+++ b/www/views/partials/each-quiniela.hbs
@@ -19,7 +19,7 @@
 						<img src="{{cordova_full_path}}images/garantizado.png">
 					{{/ if }}
 				</div><!-- iconos -->
-				<h2>{{# if tournament_instances.0.tournament.flag_class}}<i class="flag {{tournament_instances.0.tournament.flag_class}}"></i>{{/ if}}{{name_replaced}}</h2>
+				<h2>{{id}} {{# if tournament_instances.0.tournament.flag_class}}<i class="flag {{tournament_instances.0.tournament.flag_class}}"></i>{{/ if}}{{name_replaced}}</h2>
 			</div><!-- quiniela_header -->
 			<div class="quiniela_content clearfix">
 				<div class="quiniela_info clearfix">
