Register modal interactions

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -195,7 +195,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 .quiniela .quiniela_content div {float: left;}
 .quiniela .quiniela_content span {display: block;}
-.quiniela .quiniela_content span.titulo {margin-bottom: 8px;}
+.quiniela .quiniela_content span.titulo {margin-bottom: 8px; font-size: 0.7rem;}
 .quiniela .quiniela_content span.number {margin-left: 5px; display: inline-block; vertical-align: middle;}
 
 /*quiniela open*/
@@ -259,7 +259,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 /*** QUINIELA SINGLE ***/
 
-.quiniela_single {padding-top: 100px; padding-bottom: 70px; font-size: 12px; position: relative;}
+.quiniela_single {padding-top: 104px; padding-bottom: 70px; font-size: 12px; position: relative;}
 .quiniela_single .quiniela {width: 100%;}
 .quiniela_single .registro_quiniela {width: 100%; text-align: center; margin: 0;}
 .quiniela_single .quiniela_info { margin-right: 10px; display: block; }
@@ -267,26 +267,26 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 .error_inline{ display: block; clear: both; margin: 2rem 0 0 0; text-align: center; color: #FF8D00; text-transform: uppercase; font-size: 10px;}
 
-.quinielas_dropdowns select { margin: 20px 0; color: #fff; background: #000; text-decoration: none; display: block; border: 1px solid #414042; padding: 5px; float: left; border-radius: 5px; margin-right: 5%; width: 47.5%;  text-align: center;}
+.quinielas_dropdowns select { margin: 1rem 0; color: #fff; background: #000; text-decoration: none; display: block; border: 1px solid #414042; padding: 5px; float: left; border-radius: 5px; margin-right: 5%; width: 47.5%;  text-align: center;}
 .quinielas_dropdowns select.unique {width: 100%;}
 .quinielas_dropdowns select:last-child { margin-right: 0px;}
 .quinielas_dropdowns:empty{ visibility: hidden;}
 
-.quiniela_single .partidos { position: relative; width: 100%; border-top: 1px solid #77BC1F; margin-top: 2rem;}
+.quiniela_single .partidos { position: relative; width: 100%; border-top: 1px solid #77BC1F; }
 .quiniela_single .partidos h3 {font-weight: 300; letter-spacing: 1px; margin-top: 2px; margin-bottom: 6px; text-align: center; font-size: 12px;}
 .quiniela_single .partidos .opciones_partido {width: 100%; padding: 10px 0; border-top: 1px solid #8A8A8D;  margin-bottom: 0;}
 .quiniela_single .partidos .opciones_partido span { width: 33.33%; float: left; display: block; text-align: center; font-size: 12px; font-weight: 500; letter-spacing: 0.5px;}
 .quiniela_single .partidos .partido { padding-bottom: 20px; width: 100%; margin: 0; border-top: 1px solid #8A8A8D; position: relative;}
 .quiniela_single .partidos .partido .opcion_partido .linea {width: 100%; margin-top: 0px; float: left;}
 .quiniela_single .partidos .partido .opcion_partido .linea span {width: 100%; margin-top: 20px; text-align: center; display: block;}
-.quiniela_single .partidos .partido .opcion_partido.local {width: 33.33%; float: left; padding: 0.5rem 0;}
+.quiniela_single .partidos .partido .opcion_partido.local {width: 33.33%; float: left; padding: 1rem 0 0 0;}
 .quiniela_single .partidos .partido .opcion_partido.local .equipo {float: left;}
 .quiniela_single .partidos .partido .opcion_partido.local input {float: left; margin-right: 10px;}
 .quiniela_single .partidos .partido .opcion_partido.local img {float: left; margin-right: 5px; margin-left: 15px;}
 .quiniela_single .partidos .partido .opcion_partido.cierre {width: 33.33%; float: left; position: relative; }
 .quiniela_single .partidos .partido .opcion_partido.cierre input {width: 100%; text-align: center;}
 .quiniela_single .partidos .partido .opcion_partido.cierre span {text-align: center; width: 100%; display: block; position: absolute; bottom: 0px; top: 38px;}
-.quiniela_single .partidos .partido .opcion_partido.visitante {width: 33.33%; float: right; padding: 0.5rem 0;}
+.quiniela_single .partidos .partido .opcion_partido.visitante {width: 33.33%; float: right; padding: 1rem 0 0 0;}
 .quiniela_single .partidos .partido .opcion_partido.visitante .equipo {margin-left: 10px;}
 .quiniela_single .partidos .partido .opcion_partido.visitante .equipo span {display: block;}
 .quiniela_single .partidos .partido .opcion_partido.visitante input {float: right; margin-left: 10px;}
@@ -302,7 +302,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 /*Extra*/
 .quiniela_single .opcion_partido .equipo .iniciales {font-size: 1rem; letter-spacing: 0.5px;}
 	.opcion_partido .equipo .iniciales>i { font-size: 0.75rem; display: block; text-align: left;}
-.quiniela_single .opcion_partido.empate .check{left: 38%; top: 0.5rem;}
+.quiniela_single .opcion_partido.empate .check{left: 38%; top: 1rem;}
 .quiniela_single .opcion_partido label{display: inline-block; width: 100%; height: 2rem; position: relative; font-weight: 300; font-size: 1.35em; padding: 2px 2px 2px 18px; line-height: 16px; margin: 0 auto 0 0; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
 .quiniela_single .opcion_partido.visitante label{padding: 2px 32px 2px 4px;}
 
@@ -372,8 +372,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#777777', end
 
 /*Radio partidos*/
 .radio_group .opcion_partido.visitante{}
-.radio_group .opcion_partido.local .check{right: initial; left: 0.5rem; top: 0.5rem; }
-.radio_group .opcion_partido.visitante .check{ left: initial; right: 0.5rem; top: 0.5rem;}
+.radio_group .opcion_partido.local .check{right: initial; left: 0.5rem; top: 1rem; }
+.radio_group .opcion_partido.visitante .check{ left: initial; right: 0.5rem; top: 1rem;}
 
 .local.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: -5px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 .local.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
