--- a/www/views/partials/quiniela-games.hbs
+++ b/www/views/partials/quiniela-games.hbs
@@ -1,7 +1,7 @@
 	<p style="display: none;" class="instructions">Completa tus picks y guarda tu selección.</p>
 	<h3>PARTIDOS</h3>
 	<div class="opciones_partido clearfix">
-		<span>LOCAL</span> <span>{{# if data.sport_allow_ties}}EMP{{/ if}}{{# data.fixtures.0.advantage}}LÍNEA{{/ data.fixtures.0.advantage}}</span> <span>VISITANTE</span>
+		<span>LOCAL</span> <span>{{# if data.sport_allow_ties}}EMPATE{{/ if}}{{# data.fixtures.0.advantage}}LÍNEA{{/ data.fixtures.0.advantage}}</span> <span>VISITANTE</span>
 	</div><!-- opciones_partido -->
 	{{# each data.fixtures}}
 		<ul data-id="{{id}}" class="partido radio_group clearfix">
@@ -74,11 +74,7 @@
 					</div><!-- equipo -->
 				</label>						
 				<div class="linea">
-					{{# finished}}
-						<span>
-							{{score_home}}
-						</span>
-					{{/ finished}}
+					
 				</div><!-- linea -->
 			</li><!-- opcion_partido -->
 		</ul>
