--- a/www/css/style.css
+++ b/www/css/style.css
@@ -142,7 +142,7 @@ body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!importa
 /*** HEADER ***/
 
 .header { width: 100%; height; background: #000; padding: 3% 0; position: fixed; border-bottom: 1px solid #8A8A8D; z-index: 100; }
-.fixed_ios_hack{ transform: translateZ(0); -moz-transform: translatez(0); -ms-transform: translatez(0); -o-transform: translatez(0); -webkit-transform: translateZ(0); -webkit-font-smoothing: antialiased;}
+.fixed_ios_hack{ z-index: 99999999; transform: translateZ(0); -moz-transform: translatez(0); -ms-transform: translatez(0); -o-transform: translatez(0); -webkit-transform: translateZ(0); -webkit-font-smoothing: antialiased;}
 .header .header_left {float: left; width: 28%; text-align: center; margin-right: 2%;}
 .header .header_left img {width: 90%; vertical-align: middle; padding-top: 15%}
 .header .header_right {float: right; width: 70%; border-left: 1px solid #414042; padding: 0 0 1% 0;}
