--- a/www/views/partials/tabs/places.hbs
+++ b/www/views/partials/tabs/places.hbs
@@ -18,7 +18,7 @@
 							{{nick}} {{# entry.number}}<sup>{{.}}</sup>{{/ entry.number}}
 						</td>
 						<td>{{points}}</td>
-						<td class="ganar"><img src="images/billete.png">${{formatCurrency prize_amount}}</td>
+						<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">${{formatCurrency prize_amount}}</td>
 					</tr>
 				{{/ each}}
 				
