--- a/www/css/style.css
+++ b/www/css/style.css
@@ -718,7 +718,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#777777', end
 		animation: spin 1s infinite linear;
 	}
 
-	.container{ font-weight: 500; background-image: url(../images/background.png); background-position: center top; background-attachment: fixed; background-size: auto; background-repeat: no-repeat; }
+	.container, .content{ font-weight: 500; background-image: url(../images/background.png); background-position: center top; background-attachment: fixed; background-size: auto; background-repeat: no-repeat; }
 	.hidden{ display: none!important; }
 	.header .header_right .header_user_info .user_info .avatar_container{ width: 24px; height: 24px; -webkit-border-radius: 50%; -moz-border-radius: 50%; border-radius: 50%; overflow: hidden; float: left; margin-right: 7px;}
 	.header .header_right .header_user_info .user_info img { width: 100%; height: auto; }
