bugs and treats

--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -254,7 +254,7 @@
 					</div><!-- balance -->
 
 					<div class="botones clarfix">
-						<input type="submit" id="sendRegister" class="green_button" value="Registrarse" />
+						<input type="submit" id="sendRegister" class="green_button" value="Registrarme y guardar" />
 					</div>
 				</form>
 			</div><!-- quiniela-registro -->
