--- a/www/css/style.css
+++ b/www/css/style.css
@@ -258,9 +258,13 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .misquinielas.open { background-color: rgba(47, 45, 45, 0.8);}
 .misquinielas.open .link_wrapper{pointer-events: initial;}
 .quiniela_open:not(._noborder) {border-left: 3px solid #DDDDDD;}
+.misquinielas.leftie .quiniela_open:not(._noborder){border-left: none; border-right: 3px solid #DDDDDD;}
 .quiniela_live:not(._noborder) {border-left: 3px solid #F6A623;}
+.misquinielas.leftie .quiniela_live:not(._noborder){border-left: none; border-right: 3px solid #F6A623;}
 .quiniela_closed:not(._noborder) {border-left: 3px solid #FF576C;}
+.misquinielas.leftie .quiniela_closed:not(._noborder){border-left: none; border-right: 3px solid #FF576C;}
 .quiniela_otra:not(._noborder) {border-left: 3px solid #4A90E2;}
+.misquinielas.leftie .quiniela_otra:not(._noborder){border-left: none; border-right: 3px solid #4A90E2;}
 
 /*** MIS QUINIELAS CONTAINER ***/
 .misquinielas.container{margin-left: 0;}
